# brief-ci-cd-semantic-release-mkdocs

./: .pre-commit-config.yaml  Dockerfile  PROBLEMES_DETECTES.md  README.md  claude.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml  sync-develop.yml
Livraison/: COMPARATIF_OUTILS.md  LIVRAISON_FINALE.md  PROBLEMES_DETECTES.md  VEILLE_CICD.md
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
tests/: test_api.py
