[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "diagrams>=0.24.4",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.14.6",
    "safety>=3.7.0",
]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["B008"]  # FastAPI Depends() in function defaults is OK

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --cov=app --cov-report=term-missing"

# ============================================================================
# SEMANTIC RELEASE CONFIGURATION
# ============================================================================

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
build_command = "uv build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore",
    "^ci",
    "^docs",
    "^style",
    "^test",
    "^build",
    "^refactor(?!\\(.*\\)!:)",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
upload_to_vcs_release = true
